--- a/KS_WALLCOVERINGS/css/common.css
+++ b/KS_WALLCOVERINGS/css/common.css
@@ -49,6 +49,12 @@ html, body {
         margin: 0 20px;
     }
 }
+@media screen and (max-width:1240px) {
+    .wrapper2 {
+        width: auto;
+        margin: 0 20px;
+    }
+}
 .skipnav {
     position: absolute;
     top: -100px;
