--- a/KS_WALLCOVERINGS/css/layout.css
+++ b/KS_WALLCOVERINGS/css/layout.css
@@ -325,7 +325,7 @@ header.fixed {
                 }
 
 footer {
-    margin-top: 150px;
+    margin-top: 200px;
     position: relative;
 }
 footer::before {
@@ -336,20 +336,25 @@ footer::before {
     content: "";
     border-bottom: 2px solid #231916;
 }
+footer .wrapper2 {
+    position: relative;
+}
 footer .familysite {
     float: right;
     text-align: center;
-    position: relative;
+    position: absolute;
+    right: 0;
+    top: -2px;
 }
 footer .familysite button {
     position: relative;
     font-weight: 500;
-    padding-right: 81px;
+    padding-right: 40px;
     margin-top: 30px;
 }
 footer .familysite button::before {
     position: absolute;
-    right: 40px;
+    right: 0;
     top: 7px;
     content: "";
     width: 14px;
@@ -397,6 +402,11 @@ footer .familysite.on ul {
 footer .f_inner {
     display: flex;
     padding-top: 30px;
+    flex-direction: column;
+    align-items: flex-start;
+}
+footer .f_inner .f_info {
+    margin-top: 20px;
 }
 footer .f_inner .f_txt ul,
 footer .f_inner .f_info ul {
@@ -405,6 +415,9 @@ footer .f_inner .f_info ul {
 footer .f_inner .f_txt ul li,
 footer .f_inner .f_info ul li {
     margin-right: 20px;
+}
+footer .f_inner .f_txt ul li a {
+    display: block;
 }
 footer .f_inner .f_txt ul li:first-child {
     color: #C1B6A4;
@@ -415,4 +428,68 @@ footer .f_inner .f_info ul li:last-child {
 footer .copyright {
     text-align: center;
     margin: 30px 0 50px 0;
+}
+@media screen and (max-width:1400px) {
+    footer .familysite {
+        margin-right: 80px;
+    }
+}
+@media screen and (max-width:1320px) {
+    footer .familysite {
+        margin-right: 0;
+    }
+}
+@media screen and (max-width:889px) {
+    footer .f_inner .f_info ul {
+        flex-wrap: wrap;
+    }
+    footer .f_inner .f_info ul li,
+    footer .f_inner .f_info ul li:last-child {
+        margin-top: 10px;
+    }
+}
+@media screen and (max-width:580px) {
+    footer {
+        font-size: 12px;
+        margin-top: 110px;
+    }
+    footer::before {
+        border-bottom: 1px solid #231916;
+    }
+    footer .familysite {
+        float: none;
+        text-align: center;
+        position: absolute;
+        right: 50%;
+        top: -2px;
+        transform: translate(30%, 0);
+    }
+    footer .familysite ul {
+        left: -16px;
+        top: -308px;
+        padding: 10px 37px 0 26px;
+    }
+    footer .familysite button {
+        padding: 0;
+    }
+    footer .familysite button::before {
+        right: -40px;
+        top: 5px;
+        width: 11px;
+        height: 7px;
+    }
+    footer .f_txt {
+        margin-top: 50px;
+    }
+    footer .f_inner,
+    footer .f_inner .f_info ul {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+@media screen and (max-width:320px) {
+    footer .copyright {
+        width: 170px;
+    }
 }
