--- a/KS_WALLCOVERINGS/css/layout.css
+++ b/KS_WALLCOVERINGS/css/layout.css
@@ -285,7 +285,7 @@ header.fixed {
                     header.menu_open .inner .gnb ul.depth1 >li >ul.depth2{
                         display: none;
                         left: 50%;
-                        top: 63px;
+                        top: -14px;
                         transform: translate(-50%, 0);
                         width: 100vh;
                         color: #231916;
@@ -302,6 +302,7 @@ header.fixed {
                         background-color: #F5F5EB;
                     }
                     header.menu_open .inner .gnb ul.depth1 >li.on >ul.depth2 {
+                        position: relative;
                         display: block;
                     }
                     header.menu_open .inner .gnb ul.depth1 >li >ul.depth2 >li >a {
@@ -312,7 +313,7 @@ header.fixed {
                         padding-top: 20px;
                     }
                     header.menu_open .inner .gnb ul.depth1 >li >ul.depth2 >li:last-child >a {
-                        padding-bottom: 30px;
+                        padding-bottom: 10px;
                     }
                     header.menu_open .inner .search input[type="submit"] {
                         display: block;
@@ -462,6 +463,7 @@ footer .copyright {
         position: absolute;
         right: 50%;
         top: -2px;
+        z-index: 100;
         transform: translate(30%, 0);
     }
     footer .familysite ul {
