--- a/KS_WALLCOVERINGS/css/layout.css
+++ b/KS_WALLCOVERINGS/css/layout.css
@@ -205,20 +205,19 @@ header.fixed {
                         align-items: center;
                     }
                     header .inner h1.logo a {
-                        width: 63px;
-                        height: 20px;
+                        width: 90px;
+                        height: 30px;
                     }
                     header .inner .gnb {
                         margin: 0;
                         width: 18px;
-                        
                     }
                     header .inner .gnb .gnb_open {
                         display: block;
                         font-size: 0;
                         line-height: 0;
-                        width: 18px;
-                        height: 15px;
+                        width: 24px;
+                        height: 20px;
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: contain;
@@ -255,17 +254,18 @@ header.fixed {
                         width: 100%;
                         height: 100vh;
                         background-color: #231916;
-                        z-index: -1;
                     }
                     header.menu_open .inner .gnb .gnb_open {
                         display: none;
                     }
                     header.menu_open .inner .gnb .gnb_close {
+                        position: relative;
+                        z-index: 100;
                         display: block;
                         font-size: 0;
                         line-height: 0;
-                        width: 18px;
-                        height: 18px;
+                        width: 24px;
+                        height: 24px;
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: contain;
@@ -317,6 +317,22 @@ header.fixed {
                     }
                     header.menu_open .inner .search input[type="submit"] {
                         display: block;
+                        position: relative;
+                        z-index: 100;
+                    }
+                }
+                @media screen and (max-width:425px) {
+                    header .inner h1.logo a {
+                        width: 60px;
+                        height: 20px;
+                    }
+                    header .inner .gnb .gnb_open {
+                        width: 18px;
+                        height: 15px;
+                    }
+                    header.menu_open .inner .gnb .gnb_close {
+                        width: 18px;
+                        height: 18px;
                     }
                 }
                 @media screen and (min-width:768px) {
