--- a/KS_WALLCOVERINGS/css/main.css
+++ b/KS_WALLCOVERINGS/css/main.css
@@ -400,6 +400,10 @@
                     .collection .list .swiper >ul >li .txt ul.info li em {
                         font-weight: 500;
                         color: #000;
+                        background-color: #fff;
+                    }
+                    .collection .list .swiper >ul >li .txt ul.info li:first-child em {
+                        background-color: transparent;
                     }
                     .collection .box_slidebar {
                         display: none;
