--- a/DIAN/css/layout.css
+++ b/DIAN/css/layout.css
@@ -1,4 +1,73 @@
-/********************
- ***HEADER, FOOTER***
- ********************/
-
+header {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    width: 148px;
+    height: 100%;
+}
+header .left_line {
+    position: relative;
+    z-index: 100;
+    height: 100vh;
+    border-right: 3px solid #460D02;
+}
+header h1.logo {
+    font-size: 0;
+    line-height: 0;
+    padding: 32px 0 0 14px;
+}
+header h1.logo a {
+    display: block;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+    background-image: url("data:image/svg+xml,%3Csvg width='120' height='36' viewBox='0 0 120 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_35_372)'%3E%3Cpath d='M0 0.0155029H15.0107C26.1712 0.0155029 30.9899 8.07932 30.9899 18.0058C30.9899 27.9323 26.1712 36.0039 15.0107 36.0039H0V0.0155029ZM5.70517 31.3743H12.5818C22.52 31.3743 25.2886 25.2081 25.2886 18.0019C25.2886 10.7957 22.5161 4.64114 12.5779 4.64114H5.70517V31.3782V31.3743Z' fill='%23B70809'/%3E%3Cpath d='M63.3583 0.0155029H70.1022L84.0547 36H77.9356L74.4875 26.2132H58.8012L55.3492 36H49.4722L63.3583 0.0155029ZM60.4295 21.5876H72.863L66.7595 4.64114H66.6072L60.4295 21.5876Z' fill='%23B70809'/%3E%3Cpath d='M120 36H113.967L96.2031 8.56829H96.0547V36H90.6268V0.0155223H96.7146L114.521 27.4705H114.615V0H120V36Z' fill='%23B70809'/%3E%3Cpath d='M42.9157 0H37.5581V1.4785V4.52474V6.63965L38.4289 7.07815L40.1666 4.72265L42.08 6.01099H42.9157V4.52474V1.4785V0.0155223V0Z' fill='%23B70809'/%3E%3Cpath d='M40.1666 7.18292L38.4289 9.53454L37.5581 9.1038V36H42.9157V8.46739H42.08L40.1666 7.18292Z' fill='%23B70809'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_35_372'%3E%3Crect width='120' height='36' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    width: 120px;
+    height: 36px;
+}
+header .gnb {
+    margin-top: 135px;
+}
+header .gnb .gnb_open,
+header .gnb .gnb_close {
+    display: none;
+}
+header .gnb ul.depth1 {
+    position: relative;
+}
+header .gnb ul.depth1 >li >a {
+    display: block;
+    text-align: center;
+    font-weight: 700;
+    color: #020202;
+    font-size: 22px;
+    line-height: 100px;
+}
+header .gnb ul.depth2 {
+    display: none;
+}
+header .gnb ul.depth1 >li.on >ul.depth2 {
+    display: block;
+    position: absolute;
+    right: -202px;
+    top: 13px;
+    color: #020202;
+}
+header .gnb ul.depth1 >li.on >ul.depth2::before {
+    position: absolute;
+    left: -22px;
+    top: 0;
+    content: "";
+    width: 163%;
+    height: 114%;
+    border: 3px solid #460D02;
+    border-left: 0;
+    background-color: #FFE1C5;
+    z-index: -1;
+}
+header .gnb ul.depth1 >li >ul.depth2 >li >a {
+    display: block;
+    font-size: 20px;
+    line-height: 75px;
+}
