--- a/DIAN/css/main.css
+++ b/DIAN/css/main.css
@@ -1,3 +1,84 @@
 @import url(default.css);
 @import url(common.css);
 @import url(layout.css);
+
+.container .tnb {
+    float: right;
+    width: 100%;
+    border-bottom: 3px solid #460D02;
+}
+.container .tnb ul {
+    display: flex;
+    justify-content: flex-end;
+}
+.container .tnb ul li {
+    margin-right: 90px;
+}
+.container .tnb ul li:last-child {
+    margin-right: 50px;
+}
+.container .tnb ul li a {
+    display: block;
+    line-height: 100px;
+    font-size: 22px;
+    font-weight: 700;
+    color: #020202;
+}
+.container .tnb ul li a:hover {
+    color: #B70809;
+}
+.container .visual .swiper_m{
+    display: none;
+}
+.container .visual .swiper_pc {
+    width: 100%;
+    height: 860px;
+    position: relative;
+}
+.container .visual .swiper_pc ul {
+    padding: 20px 0 0 168px;
+}
+.container .visual .swiper_pc ul li .tit {
+    position: absolute;
+    left: 100px;
+    bottom: 50px;
+}
+.container .visual .swiper_pc ul li .tit h2,
+.container .visual .swiper_pc ul li .tit p {
+    color: #FFE1C5;
+}
+.container .visual .swiper_pc ul li .tit h2 {
+    font-size: 50px;
+    font-weight: 700;
+}
+.container .visual .swiper_pc ul li .tit p {
+    font-size: 30px;
+    margin-top: 20px;
+}
+.container .magazine .grid {
+    display: grid;
+    grid-template-columns: repeat(10, 173px);
+    grid-template-rows: repeat(11, 60px);
+    margin: 154px 0 0 168px;
+}
+.container .magazine .grid .tit {
+    font-size: 50px;
+    font-weight: 700;
+}
+.container .magazine .grid .item {
+    gap: 20px 20px;
+}
+.container .magazine .grid .item:nth-child(1) {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+.container .magazine .grid .item:nth-child(2) {
+    grid-column: 1 / 4;
+    grid-row: 2 / 12;
+}
+.container .magazine .grid .item:nth-child(3) {
+    
+}
+.container .magazine .grid .item .txt {
+    display: none;
+}
